# openfortivpn-connect

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/helper/src/: handlers.rs  protocol.rs  validation.rs
src-tauri/openfortivpn/: .gitignore
src-tauri/openfortivpn/etc/openfortivpn/: config
src-tauri/src/: commands.rs  dns_manager.rs  helper_client.rs  helper_installer.rs  keychain.rs  lib.rs  models.rs  process_manager.rs  profile_store.rs  tray.rs  vpn_manager.rs
src/components/: ProfileEditor.tsx  TokenPinDialog.tsx
src/hooks/: useProfiles.ts  useVpnConnection.ts
src/types/: index.ts
