[workspace]
members = [".", "helper"]

[package]
name = "openvpngui"
version = "0.1.7"
description = "OpenFortiVpn Connect - A desktop VPN client"
authors = ["you"]
license = "MIT"
repository = "https://github.com/wesleyrossetti/openfortivpn-connect"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
window-vibrancy = "0.6"
tauri-plugin-opener = "2"
log = "0.4"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
